35.network_policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
   matchLabels:
    app: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
       matchLabels:
        name: phpmyadmin
    ports:
    - protocol: TCP
      port: 3306
